--- a/index.html
+++ b/index.html
@@ -64,13 +64,12 @@
                         <h5 class="mb-0">Current Weather</h5>
                     </div>
                     <div class="card-body">
-                        <!-- Search -->
-                        <div class="row mb-3">
-                            <div class="col-md-8">
+                        <div class="row mb-3 p-2">
+                            <div class="col-12 col-md-8 col-sm-12 g-2">
                                 <input type="text" id="citySearch" class="form-control"
                                     placeholder="Enter city name (e.g., Manila, Tokyo, New York)...">
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-12 col-md-4 col-sm-12 g-2">
                                 <button class="btn btn-primary w-100" onclick="searchWeather()">
                                     <i class="bi bi-search"></i> Search Weather
                                 </button>
